# enterprise-slm-agent

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  TESTING.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_document_metadata.py  0003_refresh_token_reuse_detection.py
core/: logging.py  tracing.py
core/config/: settings.py
core/models/: __init__.py  common.py  user.py
core/security/: __init__.py  alerts.py  deps.py  jwt.py  password.py
docs/: agentic_ai_project_template.md  architecture.md
docs/runbooks/: disaster-recovery.md
helm/enterprise-athena/: .helmignore  Chart.yaml  values-production.yaml  values.yaml
helm/enterprise-athena/templates/: _helpers.tpl  limitrange.yaml  namespace.yaml  resourcequota.yaml
helm/enterprise-slm/: Chart.yaml  values-production.yaml  values.yaml
helm/enterprise-slm/templates/: _helpers.tpl  limitrange.yaml  namespace.yaml  resourcequota.yaml
helm/observability/: deploy.sh  namespace.yaml
helm/observability/dashboards/: athena-kubernetes.yaml  athena-overview.yaml  qdrant.yaml  slm-kubernetes.yaml  slm-overview.yaml
helm/observability/kube-prometheus-stack/: values.yaml
helm/observability/loki/: promtail.yaml  values.yaml
helm/observability/prometheusrules/: application.yaml  infrastructure.yaml
helm/observability/servicemonitors/: api.yaml  qdrant.yaml
helm/observability/tempo/: values.yaml
notebook/: finetune_slm.ipynb  query_optimizer_dataset.jsonl
scripts/: gpu-activate.sh  validate.py
services/api/: Dockerfile  __init__.py  cache.py  main.py  prometheus.py
services/api/clients/: __init__.py  circuit_breaker.py  service_client.py
services/api/database/: __init__.py  auth_db.py  metrics_db.py  models.py  refresh_token_db.py  session.py
services/api/middleware/: __init__.py  logging.py  rate_limit.py
services/api/routers/: __init__.py  auth.py  metrics.py  query.py
services/api/schemas/: __init__.py  auth.py  metrics.py  query.py
services/context_engine/: Dockerfile  context_optimizer.py  database.py  main.py
services/context_engine/database/: __init__.py
services/context_engine/ingestion/: __init__.py  chunker.py  parser.py
services/context_engine/queue/: __init__.py
services/context_engine/retrieval/: __init__.py  vector_store.py
services/context_engine/routers/: context.py  documents.py  search.py
services/context_engine/schemas/: __init__.py  context.py  health.py  search.py
services/context_engine/templates/: default.jinja2
services/inference/: Dockerfile  main.py
services/inference/generator/: __init__.py  llm_client.py  prompts.py
services/inference/optimizer/: __init__.py  model.py  prompts.py
services/inference/routers/: generate.py  optimize.py
services/inference/schemas/: __init__.py  generate.py  health.py  optimize.py
services/knowledge/: Dockerfile  database.py  main.py
services/knowledge/database/: document_db.py
services/knowledge/ingestion/: __init__.py  parser.py
services/knowledge/queue/: __init__.py  redis_queue.py
services/knowledge/retrieval/: __init__.py  embeddings.py  reranker.py  vector_store.py
services/knowledge/routers/: documents.py  search.py
services/knowledge/schemas/: __init__.py  documents.py  search.py
tests/: conftest.py
tests/fixtures/: __init__.py
tests/integration/: test_api_integration.py
tests/unit/test_auth/: test_auth_routes.py  test_refresh_token_reuse.py
(+119 files in other folders)
