[project]
name = "slm-first"
version = "0.1.0"
description = "Enterprise SLM-First Knowledge Copilot - A multi-user, API-first, SLM-first Enterprise Knowledge Copilot"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Enterprise Team", email = "team@enterprise.com"}
]
keywords = ["slm", "llm", "knowledge-base", "enterprise", "ai", "copilot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# Core Dependencies
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    
    # Data Validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # Authentication & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.17",
    
    # Database
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "redis>=5.2.0",
    
    # Vector Database & ML
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.3.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    
    # LLM Inference
    "vllm>=0.6.0",
    "transformers>=4.40.0",
    "huggingface-hub>=0.24.0",
    
    # Observability
    "structlog>=24.0.0",
    "prometheus-client>=0.21.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    
    # HTTP Client
    "httpx>=0.28.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic[email]>=2.0.0",
    "email-validator>=2.2.0",
    "nltk>=3.8.0",
    
    # Document Parsing
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "python-magic>=0.4.27",
    
    # Database ORM & Migrations
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
]

# Optional Dependencies
[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",
    
    # Development Tools
    "ruff>=0.8.0",
    "pre-commit>=4.1.0",
    "black>=24.10.0",
    "mypy>=1.14.0",
    
    # Documentation
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.6.0",
]

# Build System
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "services"]

# Tool Configuration
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "sqlalchemy>=2.0.46",
]
